# prost

./: .gitlab-ci.yml  CHANGELOG.md  Cargo.toml  FUZZING.md  NOTICE  README.md  generate-coverage-report.sh  msrv-pins.txt  publish-release.sh  test-each-feature.sh  update-version.sh
.github/workflows/: ci.yml
benches/: varint.rs
bilrost-derive/: Cargo.toml  README.md
bilrost-derive/src/: attrs.rs  lib.rs
bilrost-derive/src/field/: mod.rs  oneof.rs  value.rs
bilrost-types/: Cargo.toml  README.md
bilrost-types/src/: datetime.rs  lib.rs  types.rs
fuzz/: Cargo.toml
fuzz/afl/: Cargo.toml  README.md
fuzz/afl/in/: all_types.bilrost  distinguished.bilrost
fuzz/afl/proto3/: Cargo.toml
fuzz/afl/proto3/src/: main.rs
fuzz/afl/src/: create_testmessage.rs  main.rs  message.rs  parse_date.rs
fuzz/common/: Cargo.toml
fuzz/common/src/: lib.rs  test_messages.rs
fuzz/fuzzers/: bilrost_chrono_fuzz.rs  bilrost_fuzz.rs  bilrost_type_support_fuzz.rs  parse_date_fuzz.rs  test_message.rs  test_messages.rs
fuzz/src/: lib.rs  test_messages.rs
src/: buf.rs  error.rs  iter.rs  lib.rs  message.rs  types.rs
src/encoding/: buf.rs  fixed.rs  general.rs  local_proxy.rs  map.rs  mod.rs  opaque.rs  packed.rs  plain_bytes.rs  proxy.rs  tuple.rs  underived.rs  unpacked.rs  value_traits.rs  varint.rs
src/encoding/type_support/: additional.rs  arrayvec.rs  bstr.rs  bytestring.rs  chrono.rs  common.rs  core_and_alloc.rs  hashbrown.rs  mod.rs  primitives.rs  smallvec.rs  std.rs  thin_vec.rs  time.rs  tinyvec.rs
src/encoding/value_traits/: mod.rs  type_support.rs
tests/: derived_message_tests.rs
