[package]
name = "bilrost-types"
version = "0.1011.0-dev"
authors = [
    "Kent Ross <k@mad.cash>",
    "Dan Burkert <dan@danburkert.com>",
    "Lucio Franco <luciofranco14@gmail.com",
    "Tokio Contributors <team@tokio.rs>",
]
license = "Apache-2.0"
repository = "https://github.com/mumbleskates/bilrost"
documentation = "https://docs.rs/bilrost-types"
readme = "README.md"
description = "A compact protobuf-like serializer and deserializer for the Rust Language."
edition = "2021"
resolver = "2"
rust-version = "1.65"

[lib]
doctest = false

[dependencies]
bilrost = { version = "=0.1011.0-dev", path = "..", default-features = false, features = ["derive"] }
serde_json = { version = "1", default-features = false, features = ["alloc", "float_roundtrip"], optional = true }

[dev-dependencies]
bilrost = { version = "=0.1011.0-dev", path = "..", default-features = false, features = ["derive"] }
proptest = "1"

[features]
default = ["std"]
serde_json = ["dep:serde_json"]
std = ["bilrost/std"]
