[package]
name = "fuzz-libfuzzer"
version = "0.0.0"
authors = [
    "Dan Burkert <dan@danburkert.com>",
    "Tokio Contributors <team@tokio.rs>",
    "Kent Ross <k@mad.cash>",
]
publish = false
edition = "2021"
default-run = "bilrost_fuzz"

[workspace]
members = [
    "afl",
    "common",
]

[package.metadata]
cargo-fuzz = true

[dependencies]
common = { path = "common" }
libfuzzer-sys = "0.4"

[[bin]]
name = "bilrost_fuzz"
path = "fuzzers/bilrost_fuzz.rs"

[[bin]]
name = "bilrost_chrono_fuzz"
path = "fuzzers/bilrost_chrono_fuzz.rs"

[[bin]]
name = "parse_date_fuzz"
path = "fuzzers/parse_date_fuzz.rs"
