[package]
name = "common"
version = "0.0.0"
authors = [
    "Kent Ross <k@mad.cash>",
    "Dan Burkert <dan@danburkert.com>",
    "Tokio Contributors <team@tokio.rs>",
]
publish = false
edition = "2021"
default-run = "reproduce"

[package.metadata]
cargo-fuzz = true

[dependencies]
bilrost = { path = "../..", default-features = false, features = ["derive", "auto-optimize", "no-recursion-limit", "chrono", "tinyvec"] }
bilrost-types = { path = "../../bilrost-types" }
bytes = "1"
chrono = "0.4.38"
eyre = "0.6.12"
regex = "1.10.5"
tinyvec = "1"

[[bin]]
name = "reproduce"

[[bin]]
name = "reproduce_parse_date"
