[package]
name = "fuzz-target-proto3"
version = "0.1.0"
authors = ["Prost developers"]
edition = "2021"

[[bin]]
name = "fuzz-target"
path = "src/main.rs"

[[bin]]
name = "reproduce"
path = "src/reproduce.rs"

[dependencies]
afl = "0.15"
anyhow = "1"
bilrost = { version = "0.12.3", path = "../../..", features = ["derive"] }
bilrost-types = { version = "0.12.3", path = "../../../bilrost-types" }
